Additional cutoff issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -121,6 +121,10 @@ main p picture img {
   margin: 0 auto;
 }
 
+.recommended-articles-small-content-wrapper .article-card .article-card-body {
+  padding: 1.5rem;
+}  
+
 @media screen and (min-width: 600px) {
   body main {
     font-size: var(--body-font-size-l);
